# itunes-export

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/itunes_export/: __init__.py  cli.py  core.py
tests/: conftest.py  test_core.py
